<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_localcity"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_localcity" />

<!--    此处图标替换，编号1-->
    <item
        android:id="@+id/navigation_tft"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_tft" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_mine" />

</menu>