<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_tft"
        android:name="com.example.myapplication.ui.thingforthing.TftFragment"
        android:label="@string/title_tft"
        tools:layout="@layout/fragment_tft" />

    <fragment
        android:id="@+id/navigation_localcity"
        android:name="com.example.myapplication.ui.localcity.localcityFragment"
        android:label="@string/title_localcity"
        tools:layout="@layout/fragment_localcity" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.example.myapplication.ui.mine.MineFragment"
        android:label="我的"
        tools:layout="@layout/fragment_mine" />

</navigation>